Fix dynamic loading on small screens

--- a/src/App.css
+++ b/src/App.css
@@ -28,4 +28,7 @@
 
 .LoadMore {
   height: 50px;
+  display: inline-block;
+  position: relative;
+  bottom: 50px;
 }
